--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,34 @@ div.influences a {
   font-size: 0.8em;
 }
 
+h1.skillsTitle {
+  text-align: center;
+  height: 10vh;
+  background: #f7f5f5;
+  width: 100%;
+  margin-bottom: -30px;
+  padding-top: 40px;
+  
+}
+
+div.skills {
+  height: 30vh;
+  width: 100%;
+  background: #f7f5f5;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
+div.skills img {
+  height: 70px;
+}
+
+div.indivIcon {
+  text-align: center;
+}
+
 div.bottom {
   height: 100vh;
   background-image: url('./assets//bottom.svg');
