--- a/src/App.css
+++ b/src/App.css
@@ -71,12 +71,16 @@ navbar {
   list-style: none;
   display: flex;
   position: absolute;
+  z-index: 2;
   right: 50px;
   top: 40px;
 }
 
 navbar li {
   margin-left: 70px;
+}
+navbar li:hover {
+  border-bottom: 1px solid white;
 }
 
 div.headertext {
