--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@ div.mainHeader {
   background-size: cover;
   margin-top: 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   animation: fadeinHeader 0.3s linear;
@@ -82,12 +81,15 @@ navbar li {
 navbar li:hover {
   border-bottom: 1px solid white;
 }
+div.mainHeader>div.headertext {
+  display: flex;
+  flex-direction: column;
+}
 
 div.headertext {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   margin-bottom: 160px;
 }
 
@@ -194,6 +196,13 @@ div.skills img {
 
 div.indivIcon {
   text-align: center;
+}
+
+div.projects {
+  height: 100vh;
+  color: beige;
+  display: grid;
+
 }
 
 div.bottom {
