--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ navbar {
 
 navbar li {
   margin-left: 70px;
+  padding-bottom: 10px;
 }
 navbar li:hover {
   border-bottom: 1px solid white;
@@ -232,7 +233,7 @@ h1.projectitle {
   text-align: center;
 }
 
-div.projectbox button {
+button.portButton {
   background: #2814c5;
   color: white;
   border-radius: 5px;
@@ -291,6 +292,53 @@ img.demo {
   bottom: 5px;
 }
 
+div.contactContainer {
+  height: 70vh;
+  margin-bottom: -40vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 3;
+}
+
+div.form {
+  width: 70vw;
+  height: 60vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+}
+
+div.form button {
+  width: 44%;
+}
+
+input.contact {
+  width: 40%;
+  height: 20px;
+  background: #f7f5f5;
+  font-size: 1em;
+  outline: none;
+  border: none;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+
+textarea {
+  width: 40%;
+  height: 200px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background: #f7f5f5;
+  resize: none;
+  font-size: 1em;
+  margin-bottom: 20px;
+  border: none;
+}
+
 div.bottom {
   height: 100vh;
   background-image: url('./assets//bottom.svg');
@@ -340,6 +388,8 @@ div.footericons {
   font-size: 1.5em;
   color: white;
   margin-top: -15vh;
+  position: absolute;
+  z-index:3;
 }
 /* #f7f5f5; */
 div.footericons i {
