--- a/src/App.css
+++ b/src/App.css
@@ -263,11 +263,15 @@ div.projectbox button:hover {
 
 div.projectText {
   width: 45vw;
-  height: fit-content;
   padding: 20px 20px;
+  padding-top: 0;
   margin-left: 20px;
   margin-top: -15px;
   font-size: 1.2em;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+  flex-direction: column;
 }
 
 div.screen {
