--- a/src/App.css
+++ b/src/App.css
@@ -250,6 +250,7 @@ div.buttonHolder {
   width: 15%;
   height: 30px;
   margin-bottom: 20px;
+  margin-right: 50px;
   padding: 20px 10px;
   display: flex;
   justify-content: space-evenly;
@@ -265,7 +266,7 @@ div.projectbox button:hover {
 div.projectText {
   width: 45vw;
   padding: 20px 20px;
-  padding-top: 0;
+  padding-top: 0px;
   margin-left: 20px;
   margin-top: -15px;
   font-size: 1.2em;
@@ -281,7 +282,7 @@ div.screen {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 325px;
+  margin-left: 200px;
 }
 img.mac {
   width: 450px;
