--- a/src/App.css
+++ b/src/App.css
@@ -249,13 +249,11 @@ button.portButton {
 div.buttonHolder {
   width: 15%;
   height: 30px;
-  margin-bottom: 20px;
-  margin-right: 50px;
   padding: 20px 10px;
   display: flex;
   justify-content: space-evenly;
-  position: absolute;
-  left: 275px;
+  position: relative;
+  top: -20px;
 }
 
 
@@ -266,9 +264,8 @@ div.projectbox button:hover {
 div.projectText {
   width: 45vw;
   padding: 20px 20px;
-  padding-top: 0px;
   margin-left: 20px;
-  margin-top: -15px;
+  margin-bottom: 20px;
   font-size: 1.2em;
   display: flex;
   justify-content: center;
